--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+ <header>
     <h1> AI Italian poem generator</h1>
     <h2>❤️ Write your very own Italian poem to impress your loved one ❤️</h2>
+ </header> 
+ 
+ <main>
+    <form>
+        <input type="text" placeholder="topic" autofocus required/>
+        <input type="submit"/>
+    </form>
+
+    <div class="generated-poem" id="generated-poem">
+        L'amor che muove il sole
+        e l'altre stelle
+    </div>
+
+
+ </main>
+    <footer> This project was coded by 
+        <a href="https://github.com/EliSosic" target="_blank"> Elisa S. </a> 
+        It is open sourced on 
+        <a href="https://github.com/EliSosic/italian_poem_generator" target="_blank"> GitHub</a> 
+        and hosted on 
+        <a href="https://italian-poem-generator.netlify.app/" target="_blank">Netlify</a> ❤️ 
+    </footer>
 
     <script src="src/index.js"></script>
 </body>
