--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
- <header>
+
+    <div class="container">
     <h1> AI Italian poem generator</h1>
     <h2>❤️ Write your very own Italian poem to impress your loved one ❤️</h2>
- </header> 
  
- <main>
     <form>
-        <input type="text" placeholder="topic" autofocus required/>
-        <input type="submit"/>
+        <input type="text" placeholder="Write your topic" class="topic" autofocus required/>
+        <input type="submit" class="submit-button"/>
     </form>
 
     <div class="generated-poem" id="generated-poem">
@@ -26,8 +25,7 @@
         e l'altre stelle
     </div>
 
-
- </main>
+</div>
     <footer> This project was coded by 
         <a href="https://github.com/EliSosic" target="_blank"> Elisa S. </a> 
         It is open sourced on 
