--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -15,14 +16,12 @@
     <h1> AI Italian poem generator</h1>
     <h2>❤️ Write your very own Italian poem to impress your loved one ❤️</h2>
  
-    <form>
+    <form id="form">
         <input type="text" placeholder="Write your topic" class="topic" autofocus required/>
         <input type="submit" class="submit-button"/>
     </form>
 
-    <div class="generated-poem" id="generated-poem">
-        L'amor che muove il sole
-        e l'altre stelle
+    <div class="poem" id="poem">
     </div>
 
 </div>
