Imported axios and api and made it work in js

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
     <h2>❤️ Write your very own Italian poem to impress your loved one ❤️</h2>
  
     <form id="form">
-        <input type="text" placeholder="Write your topic" class="topic" autofocus required/>
+        <input type="text" placeholder="Write your topic" class="topic" id="topic" autofocus required/>
         <input type="submit" class="submit-button"/>
     </form>
 
@@ -34,5 +35,6 @@
     </footer>
 
     <script src="src/index.js"></script>
+    
 </body>
 </html>
