--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>❤️ Write your very own Italian poem to impress your loved one ❤️</h2>
  
     <form id="form">
-        <input type="text" placeholder="Write your topic" class="topic" id="topic" autofocus required/>
+        <input type="text" placeholder="Write the topic of your poem" class="topic" id="topic" autofocus required/>
         <input type="submit" class="submit-button"/>
     </form>
 
